--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,24 @@
     display: block;
 }
 
+.bold{
+    font-weight: bold;
+}
+
 body{
-    font-size: 0.8rem;
+    font-size: 0.7rem;
+}
+
+i{
+    color: #B1B1B1;
+    font-size: 1rem;
+    padding: 0 0.5rem;
+}
+
+input{
+    border: 0;
+    border-radius: 5px;
+    padding: 0.4rem;
 }
 
 #bg-top{
@@ -48,22 +64,29 @@ main{
     padding: 0.5rem;
 }
 
+#my-div{
+    align-items: center;
+}
+
 #section-contacts>div:first-child,
 #section-chat>div:first-child{
     justify-content: space-between;
     align-items: center;
     height: 60px;
     background-color: #EAEAEA;
-}
-
-#my-div{
-    align-items: center;
+    padding-right: 1rem;
 }
 
 #section-contacts>div:nth-child(2){
     background-color: #8EDAFC;
-    border:1px solid black;
+    align-items: center;
 }
+
+div.input-contacts{
+    padding: 0.3rem;
+    background-color: #EAEAEA;
+}
+
 div.input-contacts>div{
     width: 10%;
 }
@@ -74,6 +97,8 @@ div.input-contacts i{
 
 div.input-contacts>input{
     width: 90%;
+    margin-left: 1rem;
+
 }
 
 div.contacts{
@@ -81,8 +106,16 @@ div.contacts{
 }
 
 .avatar-box{
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
+    background-color: white;
+    border-radius: 50%;
+    margin-right: 1rem;
+}
+
+.avatar-box > i{
+    margin: auto;
+    color: #CEF4FF;
 }
 
 .avatar-box>img{
@@ -91,28 +124,31 @@ div.contacts{
     border-radius: 50%;
 }
 
-.contact-box{
-    padding: 0.5rem;
-}
-
-div.chat-zone{
+#chat-zone{
     height: calc(100% - 60px - 60px);
     background-image: url("../img/mine.jpg");
     background-size: contain; 
     overflow-y: scroll;
+    padding: 3rem 3rem 0 3rem;
+}
+
+#chat-zone li{
+    list-style-type: none;
+    padding: 0.5rem;
 }
 
 div.input-chat{
     height: 60px;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #F3EEEA;
 }
 
 .input-chat>input{
     width: 70%;
-    padding: 0.5rem;
 }
+
+
 
 
 
