--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Classi generali */
 *{
     padding: 0;
     margin: 0;
@@ -16,6 +17,12 @@
     font-weight: bold;
 }
 
+.clear-fix:after{
+    content: " ";
+    display: table;
+    clear: both;
+}
+
 body{
     font-size: 0.7rem;
 }
@@ -31,6 +38,8 @@ input{
     border-radius: 5px;
     padding: 0.4rem;
 }
+
+/* classi per elementi */
 
 #bg-top{
     background-color: #009688;
@@ -98,7 +107,6 @@ div.input-contacts i{
 div.input-contacts>input{
     width: 90%;
     margin-left: 1rem;
-
 }
 
 div.contacts{
@@ -132,9 +140,13 @@ div.contacts{
     padding: 3rem 3rem 0 3rem;
 }
 
-#chat-zone li{
-    list-style-type: none;
-    padding: 0.5rem;
+#chat-zone div{
+    padding: 1rem;
+    margin-top: 0.5rem;
+    border: 1px solid black;
+    border-radius: 10px;
+    float: left;
+    clear: both;
 }
 
 div.input-chat{
