--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,10 @@ input{
     padding: 0.4rem;
 }
 
+.border-bottom{
+    border-bottom: 1px solid #EAEAEA;
+}
+
 /* classi per elementi */
 
 #bg-top{
@@ -72,7 +76,7 @@ main{
     width: calc(100% / 3 * 2);
 }
 
-#section-contacts>*,
+#section-contacts>*:not(.contacts),
 #section-chat>*{
     padding: 0.5rem;
 }
@@ -113,8 +117,9 @@ div.input-contacts>input{
     margin-left: 1rem;
 }
 
-div.contacts{
-    border-top: 1px solid grey;
+div#container-contacts{
+    padding: 1rem;
+    overflow-y: scroll;
 }
 
 .avatar-box{
@@ -123,6 +128,10 @@ div.contacts{
     background-color: white;
     border-radius: 50%;
     margin-right: 1rem;
+}
+
+#container-contacts .avatar-box{
+    margin-top: 0.5rem;
 }
 
 .avatar-box > i{
@@ -134,6 +143,10 @@ div.contacts{
     height: 100%;
     width: 100%;
     border-radius: 50%;
+}
+
+div.contact-box{
+    padding-top: 1rem;
 }
 
 #chat-zone{
