--- a/css/style.css
+++ b/css/style.css
@@ -97,11 +97,13 @@ main{
 #section-contacts>div:nth-child(2){
     background-color: #8EDAFC;
     align-items: center;
+    height: 55px;
 }
 
 div.input-contacts{
     padding: 0.3rem;
     background-color: #EAEAEA;
+    height: 40px;
 }
 
 div.input-contacts>div{
@@ -120,6 +122,7 @@ div.input-contacts>input{
 div#container-contacts{
     padding: 1rem;
     overflow-y: scroll;
+    height:calc(100% - 155px) ;
 }
 
 .avatar-box{
@@ -157,14 +160,6 @@ div.contact-box{
     padding: 2rem 2rem 0 2rem;
 }
 
-#chat-zone div{
-    padding: 0.8rem;
-    margin-top: 0.5rem;
-    border: 1px solid black;
-    border-radius: 10px;
-    clear: both;
-}
-
 div.input-chat{
     height: 60px;
     justify-content: space-evenly;
@@ -179,12 +174,27 @@ div.input-chat{
 .mex-sent{
     float: right;
     background-color: #D5F9BA;
+    clear: both;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
 }
 
 .mex-received{
     float: left;
     background-color: white;
+    clear: both;
+    margin-top: 1rem;
+    padding: 0.5rem;
+
 }
+
+.info-message{
+    background-color: white;
+    border: 0;
+    margin-top: 1rem;
+    padding: 0.3rem;
+}
+
 
 
 
